# multimodal-self-evaluating-agents

./: .gitignore  README.md  program.md  pyproject.toml  run_agent.py  setup.py
configs/: ablation_config.yaml  base_config.yaml  metacognition_config.yaml
experiments/: analyze_results.py  run_ablation.py  run_benchmark.py  run_metacognition.py
msea/: __init__.py
msea/agents/: __init__.py  base_agent.py  metacognitive_agent.py  multi_agent.py  tool_agent.py
msea/evaluation/: __init__.py  benchmarks.py  consistency.py  metrics.py  self_eval.py
msea/perception/: __init__.py  encoders.py  features.py  uncertainty.py
msea/reasoning/: __init__.py  chain_of_thought.py  critique.py  process_supervision.py  reflection.py
msea/tools/: __init__.py  code_executor.py  retrieval.py  tool_registry.py  visual_tools.py
msea/utils/: __init__.py  config.py  logging.py  visualization.py
research/: experiment_plan.md  gap_analysis.md  landscape_scan.md  project_ideas.md
scripts/: auto_commit.sh  daily_auto_commit.sh  setup_environment.sh
tests/: test_agents.py  test_evaluation.py  test_perception.py  test_reasoning.py
